update: English CV, 2020

--- a/personal_cv_en.tex
+++ b/personal_cv_en.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt,letter]{moderncv}
 % \moderncvstyle{casual}       % idem
 % \moderncvcolor{orange}
-\moderncvtheme[orange]{classic}       % idem
+\moderncvtheme[burgundy]{banking}
 % optional argument are 'nocolor' (black & white cv) and 'roman' (for
 % roman fonts, instead of sans serif fonts)
 % \moderncvstyle{casual}
@@ -13,6 +13,7 @@
 \usepackage{lmodern}
 \usepackage{geometry}
 \usepackage{graphicx}
+\usepackage{textcomp}
 % \usepackage{marvosym}           % símbolos especiales, parece no ocuparse
 \usepackage[]{comment}
 
@@ -26,8 +27,11 @@
 \mobile{+52 (953)~111~7761}
 \email{zc.rene@gmail.com}
 \social[github]{userzc}
-\extrainfo{R.F.C.: ZUCR8510151J4 \\
-  Ced. Prof.: 5986352}
+
+\extrainfo{Ced. Prof.: 5986352 -- R.F.C.: ZUCR8510151J4}
+
+% \extrainfo{R.F.C.: ZUCR8510151J4 \\
+%   Ced. Prof.: 5986352}
 
 
 \photo[64pt]{FotoFrente.eps} % also optional, and the optional
@@ -55,7 +59,19 @@
 \subsection{Professional}
 \label{sec:profesional}
 
-\cventry{Feb 2014 -- present}{Software developer}{Veureka
+
+\cventry{Ene 2019 -- Presente}{Software developer}{Veureka
+  FVP}{Huajuapan de León, Oax.}{} {Data analysis and sysadmin, \emph{Firebase}, \emph{pandas}.}
+
+\cventry{Ene 2018 -- Dic 2018}{Software developer}{Veureka
+  FVP}{Huajuapan de León, Oax.}{} {Proof of concept: Payments and transactions using fiat and cripto currencies (Stellar).}
+
+
+\cventry{Ene 2017 -- Dic 2017}{Software developer}{Veureka
+  FVP}{Huajuapan de León, Oax.}{} {Proof of concept: Setup public and private blockchain networks, \emph{Ripple} and \emph{Stellar}.}
+
+
+\cventry{Feb 2014 -- Dic 2016}{Software developer}{Veureka
   FVP}{Huajuapan de León, Oax.}{} {Software project development with optimization components in {\em Java}.}
 
 \cventry{2014}{External Consultant}{Colegio de Bachilleres del Estado
