update: job title

--- a/personal_cv.tex
+++ b/personal_cv.tex
@@ -62,7 +62,7 @@
 
 
 
-\cventry{Ene 2019 -- Presente}{Desarrollador de Software}{Veureka
+\cventry{Ene 2019 -- Presente}{Ingeniero de datos}{Veureka
   FVP}{Huajuapan de León, Oax.}{} {Análisis de datos y sysadmin, \emph{Firebase}, \emph{pandas}.}
 
 \cventry{Ene 2018 -- Dic 2018}{Desarrollador de Software}{Veureka
