--- a/personal_cv_en.tex
+++ b/personal_cv_en.tex
@@ -60,7 +60,7 @@
 \label{sec:profesional}
 
 
-\cventry{Ene 2019 -- Presente}{Software developer}{Veureka
+\cventry{Ene 2019 -- Presente}{Data Engineer}{Veureka
   FVP}{Huajuapan de León, Oax.}{} {Data analysis and sysadmin, \emph{Firebase}, \emph{pandas}.}
 
 \cventry{Ene 2018 -- Dic 2018}{Software developer}{Veureka
