update: fix typo

--- a/personal_cv_en.tex
+++ b/personal_cv_en.tex
@@ -64,7 +64,7 @@
   FVP}{Huajuapan de León, Oax.}{} {Data analysis and sysadmin, \emph{Firebase}, \emph{pandas}.}
 
 \cventry{Ene 2018 -- Dic 2018}{Software developer}{Veureka
-  FVP}{Huajuapan de León, Oax.}{} {Proof of concept: Payments and transactions using fiat and cripto currencies (Stellar).}
+  FVP}{Huajuapan de León, Oax.}{} {Proof of concept: Payments and transactions using fiat and crypto currencies (Stellar).}
 
 
 \cventry{Ene 2017 -- Dic 2017}{Software developer}{Veureka
