actualización: detalles de puestos

--- a/personal_cv.tex
+++ b/personal_cv.tex
@@ -31,7 +31,7 @@
 \extrainfo{Ced. Prof.: 5986352 -- R.F.C.: ZUCR8510151J4}
 
 % \extrainfo{R.F.C.: ZUCR8510151J4 \\
-%   Ced. Prof.: 5986352}
+% Ced. Prof.: 5986352}
 
 \photo[64pt]{FotoFrente.eps} % also optional, and the optional
 % argument is the height the picture must
@@ -63,18 +63,45 @@
 
 
 \cventry{Ene 2019 -- Presente}{Ingeniero de datos}{Veureka
-  FVP}{Huajuapan de León, Oax.}{} {Análisis de datos y sysadmin, \emph{Firebase}, \emph{pandas}.}
+  FVP}{Huajuapan de León, Oax.}{} {Análisis de datos y sysadmin, \emph{Firebase}, \emph{pandas}.
+  \begin{itemize}
+  \item Evaluación de estrucutras de datos de proveedores de administración de reservaciones: Travolucionary, HotelDO, RateHawk, Hotelbeds, Jumbobeds, etc.
+  \item Análisis de datos de adminstración de reservaciones.
+  \item Diseño, implementación y mantenimiento de ETL desde proveedores de administración de reservaciones a \emph{Firebase}.
+  \end{itemize}
+}
 
 \cventry{Ene 2018 -- Dic 2018}{Desarrollador de Software}{Veureka
-  FVP}{Huajuapan de León, Oax.}{} {Prueba de concepto para transacciones y pagos utilizando monedas fiat y criptomonedas.}
+  FVP}{Huajuapan de León, Oax.}{} {Prueba de concepto para transacciones y pagos utilizando monedas fiat y criptomonedas.
+  \begin{itemize}
+  \item Diseño de systema de recompensa de pagos incorporando \emph{Stellar}, \emph{SPEI} y \emph{OpenPay}.
+  \item Líder de equipo técnico en la implemnetación de servicios para sistema de recompensa de pagos utilizando moendas fiat y criptomonedas.
+  \item PO de aplicación web para el sistema de recompensas de pagos.
+  \end{itemize}
+}
 
 
 \cventry{Ene 2017 -- Dic 2017}{Desarrollador de Software}{Veureka
-  FVP}{Huajuapan de León, Oax.}{} {Redes públicas y privadas con protocolos de blockchain, \emph{Ripple} y \emph{Stellar}.}
+  FVP}{Huajuapan de León, Oax.}{} {Redes públicas y privadas con protocolos de blockchain, \emph{Ripple} y \emph{Stellar}.
+  \begin{itemize}
+  \item Líder en investigación y evaluación de API para protocolos blockchain disponibles.
+  \item Configuración de nodos en redes públicas y de producción para \emph{Ripple} y \emph{Stellar}.
+  \item Líder en la configrucaión de redes privadas para \emph{Ripple} y \emph{Stellar}.
+  \end{itemize}
+}
 
 \cventry{Feb 2014 -- Dic 2016}{Desarrollador de Software}{Veureka
   FVP}{Huajuapan de León, Oax.}{} {Desarrollo de proyectos de software
-  con componentes de optimización {\em Java}.}
+  con componentes de optimización {\em Java}.
+  \begin{itemize}
+  \item Diseño de adatpación e implementación de solucionadores de problemas con restricciones para:
+    \begin{itemize}
+    \item Asignación de recursos.
+    \item Asignación de tiempo.
+    \end{itemize}
+  \item Líder de equipo técnico en la creación de servicios que encapsulan solucionadores de problemas con restricciones.
+  \end{itemize}
+}
 
 \cventry{2014}{Asesor Externo}{Colegio de Bachilleres del Estado de
   Oaxaca}{Oaxaca de Juárez, Oaxaca}{} {Impartición de asesorías
@@ -177,12 +204,11 @@
 \section{Lenguajes de programación}
 \label{sec:leng-prog}
 
-
 \cvcomputer{General}{Python}{General}{node}
 \cvcomputer{General}{C++}{General}{Java}
 \cvcomputer{Scripting}{bash}{Scripting}{zsh}
 \cvcomputer{Programación lógica}{LISP}{Programación lógica}{Prolog}
-\cvcomputer{Optimización}{Optaplaner}{Análisis de datos}{pandas}
+\cvcomputer{Optimización}{Optaplaner}{Análisis de datos}{pandas, dask}
 \cvcomputer{SaaS}{Google Cloud Platfom (GCP)}{SaaS}{Firebase}
 
 \section{Conocimientos de computación}
