--- a/personal_cv_en.tex
+++ b/personal_cv_en.tex
@@ -31,7 +31,7 @@
 \extrainfo{Ced. Prof.: 5986352 -- R.F.C.: ZUCR8510151J4}
 
 % \extrainfo{R.F.C.: ZUCR8510151J4 \\
-%   Ced. Prof.: 5986352}
+% Ced. Prof.: 5986352}
 
 
 \photo[64pt]{FotoFrente.eps} % also optional, and the optional
@@ -61,18 +61,45 @@
 
 
 \cventry{Ene 2019 -- Presente}{Data Engineer}{Veureka
-  FVP}{Huajuapan de León, Oax.}{} {Data analysis and sysadmin, \emph{Firebase}, \emph{pandas}.}
+  FVP}{Huajuapan de León, Oax.}{} {Data analysis and sysadmin, \emph{Firebase}, \emph{pandas}.
+  \begin{itemize}
+  \item Evaluation of booking management providers data structure: Travolucionary, HotelDO, RateHawk, Hotelbeds, Jumbobeds, etc.
+  \item Analys of booking management data.
+  \item Design, implementation and maintenance of ETL from booking management providers to \emph{Firebase}.
+  \end{itemize}
+}
 
 \cventry{Ene 2018 -- Dic 2018}{Software developer}{Veureka
-  FVP}{Huajuapan de León, Oax.}{} {Proof of concept: Payments and transactions using fiat and crypto currencies (Stellar).}
+  FVP}{Huajuapan de León, Oax.}{} {Proof of concept: Payments and transactions using fiat and crypto currencies \emph(Stellar).
+  \begin{itemize}
+  \item Design a payments reward system incorporating \emph{Stellar}, \emph{SPEI} and \emph{OpenPay}.
+  \item Leading technical team members in implementing services for a payments reward system using fiat and crypto currentices.
+  \item PO of payments reward system's web app.
+  \end{itemize}
+}
 
 
 \cventry{Ene 2017 -- Dic 2017}{Software developer}{Veureka
-  FVP}{Huajuapan de León, Oax.}{} {Proof of concept: Setup public and private blockchain networks, \emph{Ripple} and \emph{Stellar}.}
+  FVP}{Huajuapan de León, Oax.}{} {Proof of concept: Setup public and private blockchain networks, \emph{Ripple} and \emph{Stellar}.
+  \begin{itemize}
+  \item Lead investigation and evaluation of available blockchain API protocols.
+  \item Setup nodes available public prod and test networks for \emph{Ripple} and \emph{Stellar}.
+  \item Lead private network setup for \emph{Ripple} and \emph{Stellar}.
+  \end{itemize}
+}
 
 
 \cventry{Feb 2014 -- Dic 2016}{Software developer}{Veureka
-  FVP}{Huajuapan de León, Oax.}{} {Software project development with optimization components in {\em Java}.}
+  FVP}{Huajuapan de León, Oax.}{} {Software project development with optimization components in {\em Java}.
+  \begin{itemize}
+  \item Adaptation design and implementation of constraint problem solvers for:
+    \begin{itemize}
+    \item Resource allocation.
+    \item Time allocation.
+    \end{itemize}
+  \item Leading technical team members creating a service encapsulating constraint problem solvers.
+  \end{itemize}
+}
 
 \cventry{2014}{External Consultant}{Colegio de Bachilleres del Estado
   de Oaxaca}{Oaxaca de Juárez, Oaxaca}{} {Specialized Mathematics
@@ -135,17 +162,17 @@
 \label{sec:otros-cursos}
 
 % \cventry{2009}{Segundo foro nacional de tesis de licenciatura en
-%   matemáticas}{}{}{}{Participación en el evento realizado del 17 al 19
-%   de junio.}
+% matemáticas}{}{}{}{Participación en el evento realizado del 17 al 19
+% de junio.}
 
 \cventry{2009}{Second National forum on mathematics thesis,
   undergraduate level.}{}{}{}{Speaker attendance in the event, June 17
   to 19.}
 
 % \cventry{2009}{Segunda escuela internacional de modelación matemática
-%   y sus aplicaciones}{Sobre la generación de superficies ópticas con
-%   herramientas de pulido clásico}{}{}{Participación en sesión de
-%   carteles realizada del 12 al 16 de enero.}
+% y sus aplicaciones}{Sobre la generación de superficies ópticas con
+% herramientas de pulido clásico}{}{}{Participación en sesión de
+% carteles realizada del 12 al 16 de enero.}
 
 \cventry{2009}{Second International School on Mathematical Modeling
   and Applications}{On optical surface generation using classic polish
@@ -155,8 +182,8 @@
 \cventry{2008}{Bachelor's degree}{}{}{}{Unanimous approval.}
 
 % \cventry{2008}{Technological University of the Mixteca}{Huajuapan de
-%   León}{}{}{Apoyo técnico al equipo de cómputo del laboratorio de
-%   matemáticas aplicadas por un total de 60 horas.}
+% León}{}{}{Apoyo técnico al equipo de cómputo del laboratorio de
+% matemáticas aplicadas por un total de 60 horas.}
 
 \cventry{2008}{Technological University of the Mixteca}{Huajuapan de
   León}{}{}{Technical support to the Applied Mathematics Lab, 60
@@ -184,11 +211,21 @@
 \cvlanguage{Spanish}{High level}{Mother language.}
 \cvlanguage{English}{High level}{From {\em UTM} and {\em CIMAT}.}
 
+
+\section{Programming languages}
+\label{sec:prog-lang}
+
+\cvcomputer{General}{Python}{General}{node}
+\cvcomputer{General}{C++}{General}{Java}
+\cvcomputer{Scripting}{bash}{Scripting}{zsh}
+\cvcomputer{Logic programming}{LISP}{Logic programming}{Prolog}
+\cvcomputer{Optimization}{Optaplaner}{Data analysis}{pandas, dask}
+\cvcomputer{SaaS}{Google Cloud Platfom (GCP)}{SaaS}{Firebase}
+
 \section{Computer Skills}
 \label{sec:conoc-de-comp}
 
-\cvdoubleitem{Operating Systems}{Windows, Linux (Ubuntu, Debian,
-  etc.)}{Programming Languages}{Java, C++, Prolog, Python, CLIPS, LISP}
+\cvdoubleitem{OS}{Windows)}{OS}{Linux (Ubuntu, Debian, etc.}
 
 \cvdoubleitem{Productivity software}{MS Office, OpenOffice,
   LibreOffice}{Mathematical packages}{Octave, MatLab, R, Maxima,
